--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "holdon",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app/main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node_modules/.bin/electron .",
+    "build-svelte": "cd svelte && npm run build && cp public/build/bundle* ../app/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^13.1.2"
+    "electron": "^13.1.2",
+    "electron-builder": "^22.11.7"
+  },
+  "dependencies": {
+    "@nut-tree/nut-js": "^1.6.0",
+    "node-key-sender": "^1.0.11",
+    "svelte": "^3.38.2"
   }
 }
