--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "dev": "node_modules/.bin/electron .",
-    "build-svelte": "cd svelte && npm run build && cp public/build/bundle* ../app/"
+    "build-svelte": "cd svelte && npm run build && cp public/build/bundle* ../app/ && cp public/bundle* ../app/"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +15,6 @@
     "electron-builder": "^22.11.7"
   },
   "dependencies": {
-    "@nut-tree/nut-js": "^1.6.0",
     "node-key-sender": "^1.0.11",
     "svelte": "^3.38.2"
   }
