--- a/svelte/package.json
+++ b/svelte/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "smoothscroll-polyfill": "^0.4.4"
   }
 }
